fixed bugs in html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -7,7 +7,7 @@
    </head> 
    <body>
          
-   <div id="gs" class="gameScreen">
+ 
 
       <div class="flexCommon gameDeleteScoreSaveWrapper">
                <div class="resultText">
@@ -39,6 +39,7 @@
                   <div id="13"  draggable="true" ondragstart="drag(event)" class="operator flexCommon"><span class="numberOperatorText"> /</span></div>
                </div>
       </div>
+      <div id="gs" class="gameScreen">
       <div class="gameView flexCommon">
        
          <div id="exp" class=" flexCommon expression">
@@ -49,6 +50,6 @@
       <div class="gameCharacter">
       </div>
    </div> 
-    <script src="js/events.js"> </script>
+    <script src="js/app/events.js"> </script>
    </body>  
 </html>
